Primeiro Commit Editado

--- a/index.html
+++ b/index.html
@@ -5,40 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal</title>
+    <link rel="shortcut icon" type="image/png" href="assets/images/icon.png">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 </head>
 <body>
-
-    <div>   
-        <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <a href="index.html"><img src="assets/images/logo.png"></a>
+            </div>
+            <div class="menu">
+                <nav>
+                    <a href="">Home</a>
+                    <a href="">God of War</a>
+                    <a href="">Games</a>
+                    <a href="">Nórdica</a>
+                    <a href="">Grega</a>
+                </nav>
+            </div>
+            <div class="social">
+                <button><a href=""></a><i class="uil uil-instagram"></i></button>
+                <button><a href=""></a><i class="uil uil-github-alt"></i></button>
+                <button><a href=""></a><i class="uil uil-linkedin-alt"></i></button>
+            </div>
         </div>
-    </div>
-
-    <div class="bar"></div>
-
-    <div class="content">
-        <div class="sidebar">
-            <h2>Título</h2>
-            <ul>
-                <li><a href="#">Links</a></li>
-            </ul>
-        </div>
-
-        <div class="main">
-            
-        </div>
-
-        <div class="anchors">
-            <h2>Neste Artigo</h2>
-            <ul>
-                <li><a href="#">Âncoras</a></li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="footer">
-
-    </div>
+    </header>
+    
 </body>
 </html>
