--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>PlayPédia | Página Principal</title>
     <link rel="shortcut icon" type="image/png" href="assets/images/icon.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
 </head>
 <body>
+    <!-- Header / Cabeçalho -->
     <header class="header">
         <div class="container">
             <div class="logo">
@@ -17,8 +18,8 @@
             </div>
             <div class="menu">
                 <nav>
-                    <a href="">Home</a>
-                    <a href="">God of War</a>
+                    <a href="index.html">Home</a>
+                    <a href="">God of War Ragnarök</a>
                     <a href="">Games</a>
                     <a href="">Nórdica</a>
                     <a href="">Grega</a>
@@ -28,9 +29,146 @@
                 <button><a href=""></a><i class="uil uil-instagram"></i></button>
                 <button><a href=""></a><i class="uil uil-github-alt"></i></button>
                 <button><a href=""></a><i class="uil uil-linkedin-alt"></i></button>
+                <button><a href=""></a><i class="uil uil-youtube"></i></button>
             </div>
         </div>
     </header>
-    
+    <!-- Barra de Pesquisa / Search Bar -->
+    <div class="bar">
+        <div class="search-bar">
+            <form class="search" method="get" action="#">
+                <input placeholder="Procure algo sobre God Of War..." type="text">
+                <button id="button" type="submit">Buscar</button>
+            </form>
+        </div>
+    </div>
+    <!-- Barra Lateral / Side Bar -->
+    <div class="content">
+        <nav class="sidebar">
+            <div class="toc" role="navigation">
+                <input class="toctogglecheckbox" type="checkbox" role="button" style="display: none;">
+                <div class="toctitle" style="min-width: 223px;">
+                    <h2>
+                        <i class="uil uil-list-ul"></i>
+                        Conteúdo
+                    </h2>
+                    <span>
+                        <label></label>
+                    </span>
+                </div>
+                <ul>
+                    <li>
+                        <a href="#Plot">
+                            <span>1.</span>
+                            <span></span>Plot</span>
+                        </a>
+                        <ul>
+                            <li>
+                                <a href="#Main Story">
+                                    <span>1.1.</span>
+                                    <span>Main Story</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#Epilogue">
+                                    <span>1.2.</span>
+                                    <span>Epilogue</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#Characters">
+                            <span>2.</span>
+                            <span></span>Characters</span>
+                        </a>
+                        <ul>
+                            <li>
+                                <a href="#Main Protagonists">
+                                    <span>2.1.</span>
+                                    <span>Main Protagonists</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#Secondary Characters">
+                                    <span>2.2.</span>
+                                    <span>Secondary Characters</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#Antagonists">
+                                    <span>2.3.</span>
+                                    <span>Antagonists</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#Enemies">
+                            <span>3.</span>
+                            <span></span>Enemies</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#Weapons">
+                            <span>4.</span>
+                            <span></span>Weapons</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#Gameplay">
+                            <span>5.</span>
+                            <span></span>Gameplay</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#Development">
+                            <span>6.</span>
+                            <span></span>Development</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#Cast">
+                            <span>7.</span>
+                            <span></span>Cast</span>
+                        </a>
+                        <ul>
+                            <li>
+                                <a href="#Principal Voice Actors">
+                                    <span>7.1.</span>
+                                    <span>Principal Voice Actors</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#Additional Voices">
+                                    <span>7.2.</span>
+                                    <span>Additional Voices</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="main">
+            
+        </div>
+
+        <div class="anchors">
+            <h2>Neste Artigo</h2>
+            <ul>
+                <li><a href="#">Âncoras</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="footer">
+
+    </div>
 </body>
 </html>
