--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 </nav>
             </div>
             <div class="social">
-                <button><a href=""></a><i class="uil uil-instagram"></i></button>
-                <button><a href=""></a><i class="uil uil-github-alt"></i></button>
-                <button><a href=""></a><i class="uil uil-linkedin-alt"></i></button>
-                <button><a href=""></a><i class="uil uil-youtube"></i></button>
+                <button><a href="#"></a><i class="uil uil-instagram"></i></button>
+                <button><a href="#"></a><i class="uil uil-github-alt"></i></button>
+                <button><a href="#"></a><i class="uil uil-linkedin-alt"></i></button>
+                <button><a href="#"></a><i class="uil uil-youtube"></i></button>
             </div>
         </div>
     </header>
@@ -45,130 +45,119 @@
     <!-- Barra Lateral / Side Bar -->
     <div class="content">
         <nav class="sidebar">
-            <div class="toc" role="navigation">
-                <input class="toctogglecheckbox" type="checkbox" role="button" style="display: none;">
+            <div class="toc">
+                <input type="text" class="toctogglecheckbox">
                 <div class="toctitle" style="min-width: 223px;">
                     <h2>
                         <i class="uil uil-list-ul"></i>
                         Conteúdo
                     </h2>
-                    <span>
-                        <label></label>
-                    </span>
                 </div>
                 <ul>
-                    <li>
-                        <a href="#Plot">
-                            <span>1.</span>
-                            <span></span>Plot</span>
-                        </a>
-                        <ul>
-                            <li>
-                                <a href="#Main Story">
-                                    <span>1.1.</span>
-                                    <span>Main Story</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#Epilogue">
-                                    <span>1.2.</span>
-                                    <span>Epilogue</span>
-                                </a>
-                            </li>
-                        </ul>
+                    <li><a href="#Plot"><span>1.</span><span>Plot</span></a>
+                    <ul>
+                    <li><a href="#Main_Story"><span>1.1.</span><span>História Principal</span></a></li>
+                    <li><a href="#Epilogue"><span>1.2.</span><span>Epílogo</span></a></li>
+                    </ul>
                     </li>
-                </ul>
-                <ul>
-                    <li>
-                        <a href="#Characters">
-                            <span>2.</span>
-                            <span></span>Characters</span>
-                        </a>
-                        <ul>
-                            <li>
-                                <a href="#Main Protagonists">
-                                    <span>2.1.</span>
-                                    <span>Main Protagonists</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#Secondary Characters">
-                                    <span>2.2.</span>
-                                    <span>Secondary Characters</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#Antagonists">
-                                    <span>2.3.</span>
-                                    <span>Antagonists</span>
-                                </a>
-                            </li>
-                        </ul>
+                    <li><a href="#Characters"><span>2.</span><span>Personagens</span></a>
+                    <ul>
+                    <li><a href="#Main_Protagonists"><span>2.1.</span><span>Protagonistas</span></a></li>
+                    <li><a href="#Secondary_Characters"><span>2.2.</span><span>Secundários</span></a></li>
+                    <li><a href="#Antagonists"><span>2.3.</span><span>Antagonistas</span></a></li>
+                    </ul>
                     </li>
-                </ul>
-                <ul>
-                    <li>
-                        <a href="#Enemies">
-                            <span>3.</span>
-                            <span></span>Enemies</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#Weapons">
-                            <span>4.</span>
-                            <span></span>Weapons</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#Gameplay">
-                            <span>5.</span>
-                            <span></span>Gameplay</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#Development">
-                            <span>6.</span>
-                            <span></span>Development</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#Cast">
-                            <span>7.</span>
-                            <span></span>Cast</span>
-                        </a>
-                        <ul>
-                            <li>
-                                <a href="#Principal Voice Actors">
-                                    <span>7.1.</span>
-                                    <span>Principal Voice Actors</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#Additional Voices">
-                                    <span>7.2.</span>
-                                    <span>Additional Voices</span>
-                                </a>
-                            </li>
-                        </ul>
+                    <li><a href="#Enemies"><span>3.</span><span>Enimigos</span></a></li>
+                    <li><a href="#Weapons"><span>4.</span><span>Armas</span></a></li>
+                    <li><a href="#Gameplay"><span>5.</span><span>Gameplay</span></a></li>
+                    <li><a href="#Development"><span>6.</span><span>Desenvolvimento</span></a></li>
+                    <li><a href="#Cast"><span>7.</span><span>Elenco</span></a>
+                    <ul>
+                    <li><a href="#Principal_voice_actors"><span>7.1.</span><span>Principais Dubladores</span></a></li>
+                    <li><a href="#Additional_voices"><span>7.2.</span><span>Vozes Adicionais</span></a></li>
+                    </ul>
                     </li>
                 </ul>
             </div>
         </nav>
 
-        <div class="main">
-            
-        </div>
+        <main>
+            <div class="main"> 
+                <article>
+                    <h1>God Of War</h1>
+                    <p><b><i>God of War</i></b> é uma série de jogos eletrônicos de ação-aventura criada por David Jaffe da Santa Monica Studio, da Sony. Iniciada em 2005 no console PlayStation 2 (PS2), tornou-se carro-chefe para a marca PlayStation, consistindo em nove jogos em várias plataformas. Baseada em distintas mitologias, a história segue Kratos, um guerreiro espartano que foi levado a matar sua família por seu antigo mestre, o deus da guerra Ares. Isso desencadeia uma série de eventos que levam à guerras com os panteões mitológicos. A era da mitologia grega da série mostra Kratos seguindo um caminho de vingança devido às maquinações dos deuses do Olimpo, enquanto a era da mitologia nórdica, que apresenta seu filho Atreus como protagonista secundário, mostra um Kratos mais velho em um caminho de redenção, o que inadvertidamente coloca os dois em conflito com os deuses nórdicos e em busca do impedimento do Ragnarök.</p>
+                    <p>A Santa Monica desenvolveu todos os títulos principais, enquanto a Ready at Dawn e Javaground/Sony Online Entertainment-Los Angeles (SOE-LA) desenvolveram os três jogos paralelos. A Sony Interactive Entertainment (SIE) publicou todos os jogos, exceto o título de telefone celular, que foi publicado pela Sony Pictures Digital. Os primeiros sete jogos constituem a era grega da franquia. <b><i>God of War</i></b> (2005), <b><i>God of War II</i></b> (2007) e <b><i>God of War III</i></b> (2010) compõem sua trilogia principal; os dois primeiros foram lançados no PS2 e o terceiro no PlayStation 3 (PS3). Uma pré-sequência, <b><i>Ascension</i></b> (2013), também foi lançada para PS3. Outros jogos incluem <b><i>Chains of Olympus</i></b> (2008) e <b><i>Ghost of Sparta</i></b> (2010) para PlayStation Portable (PSP), e <b><i>Betrayal</i></b> (2007) para telefones celulares que suportam a plataforma Java, Micro Edition (Java ME). A era nórdica começou com o título de 2018, também intitulado <b><i>God of War</i></b> e lançado inicialmente para PlayStation 4 (PS4). Foi acompanhado por uma pequena pré-sequência, <b><i>A Call from the Wilds</i></b> (2018), um jogo baseado em texto através do Facebook Messenger. Uma sequência, <b><i>Ragnarök</i></b>, foi lançada em 2022 para PS4 e PlayStation 5 (PS5), concluindo a era nórdica.</p>
+                    <p>Os títulos da série foram aclamados como alguns dos melhores jogos de todos os tempos. A franquia recebeu diversos prêmios, incluindo vários reconhecimentos de Jogo do Ano para os títulos de 2005 e 2018. Alguns jogos também foram remasterizados para plataformas mais recentes da PlayStation. Até novembro de 2020, a franquia vendeu mais de 51 milhões de unidades em todo o mundo. As fortes vendas e o suporte da série levaram à expansão da franquia para outras mídias, como três séries de quadrinhos e três romances. Uma adaptação cinematográfica do título original estava em desenvolvimento, mas acabou sendo cancelada. Dentre as mercadorias, incluem artes, roupas, brinquedos e réplicas de adereços, bem como trilhas sonoras de jogos, incluindo um álbum de heavy metal, intitulado Blood & Metal (2010), que apresenta músicas originais de várias bandas inspiradas na franquia.</p>
+                </article>
+            </div>
+            <figure>
+                <img src="assets/images/cover.jpg" alt="" width="90%">
+                <figcaption>Imagem da capa do jogo <b>God of War Ragnarök</b></figcaption>
+            </figure>
+        </main>
 
-        <div class="anchors">
-            <h2>Neste Artigo</h2>
-            <ul>
-                <li><a href="#">Âncoras</a></li>
-            </ul>
+        <div class="table-information">
+            <nav class="nav-table">
+                <h2>Jogo Mais Recente</h2>
+                <table class="table-lateral" summary="Tabela com informações resumidas sobre o jogo">
+                    <tr class="row-table">
+                        <th colspan="2">God of War Ragnarök</th>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><img src="assets/images/God_of_war_Ragnarok.png" width="230"></td>
+                    </tr>
+                    <tr>
+                        <th>Desenvolvedora</th>
+                        <td>Santa Monica Studios</td>
+                    </tr>
+                    <tr>
+                        <th>Editora</th>
+                        <td>Sony Interactive Entertainment</td>
+                    </tr>
+                    <tr>
+                        <th>Diretor</th>
+                        <td>Eric Williams</td>
+                    </tr>
+                    <tr>
+                        <th>Engine</th>
+                        <td>System created by Sony Santa Monica</td>
+                    </tr>
+                    <tr>
+                        <th>Plataformas</th>
+                        <td>PlayStation 5
+                            PlayStation 4</td>
+                    </tr>
+                    <tr>
+                        <th>Data de Lançamento</th>
+                        <td>09 de Novembro de 2022</td>
+                    </tr>
+                    <tr>
+                        <th>Modo</th>
+                        <td>Single Player</td>
+                    </tr>
+                    <tr class="date-row">
+                        <td>Lançamento Anterior</td>
+                        <td>God of War (2018)</td>
+                    </tr>
+                </table>
+            </nav>
         </div>
+        
+
     </div>
 
-    <div class="footer">
-
-    </div>
+    <footer>
+        <div class="footer">
+                <p>Este texto é disponibilizado nos termos da licença Atribuição-CompartilhaIgual 4.0 Internacional (CC BY-SA 4.0)</p>
+                <p>da Creative Commons; pode estar sujeito a condições adicionais</p>
+                <p>Para mais detalhes, consulte as condições de utilização</p>
+                <div class="social-footer">
+                    <button><a href="#"></a><i class="uil uil-instagram"></i></button>
+                    <button><a href="#"></a><i class="uil uil-github-alt"></i></button>
+                    <button><a href="#"></a><i class="uil uil-linkedin-alt"></i></button>
+                    <button><a href="#"></a><i class="uil uil-youtube"></i></button>
+                </div>
+        </div>
+    </footer>
 </body>
 </html>
