--- a/ragnarok.html
+++ b/ragnarok.html
@@ -94,6 +94,11 @@
                 <img src="assets/images/cover.jpg" alt="" width="90%">
                 <figcaption>Imagem da capa do jogo <b>God of War Ragnarök</b></figcaption>
             </figure>
+            <div class="contents">
+                <a href="#Plot" id="Plot"><h2>Plot</h2></a>
+                <hr>
+                <a href="#Main_Story" id="Main_Story"><h3>História Principal</h3></a>
+            </div>
         </main>
 
         <div class="table-information">
@@ -143,14 +148,20 @@
             </nav>
         </div>
         
-
     </div>
 
     <footer>
         <div class="footer">
-                <p>Este texto é disponibilizado nos termos da licença Atribuição-CompartilhaIgual 4.0 Internacional (CC BY-SA 4.0)</p>
-                <p>da Creative Commons; pode estar sujeito a condições adicionais</p>
-                <p>Para mais detalhes, consulte as condições de utilização</p>
+            <h1>
+                <div class="logo">
+                    <a href="index.html"><img src="assets/images/logo.png"></a>
+                </div>
+            </h1>
+            <p>PlayPédia, o seu guia definitivo para o mundo dos jogos!</p>
+            <div id="footer-copyright">
+                &#169
+                2023 all rights reserved
+            </div>
                 <div class="social-footer">
                     <button><a href="#"></a><i class="uil uil-instagram"></i></button>
                     <button><a href="#"></a><i class="uil uil-github-alt"></i></button>
