--- a/games.html
+++ b/games.html
@@ -96,54 +96,55 @@
             </figure>
         </main>
 
-        <div class="table-information">
-            <nav class="nav-table">
-                <h2>Jogo Mais Recente</h2>
-                <table class="table-lateral" summary="Tabela com informações resumidas sobre o jogo">
-                    <tr class="row-table">
-                        <th colspan="2">God of War Ragnarök</th>
-                    </tr>
-                    <tr>
-                        <td colspan="2"><img src="assets/images/God_of_war_Ragnarok.png" width="230"></td>
-                    </tr>
-                    <tr>
-                        <th>Desenvolvedora</th>
-                        <td>Santa Monica Studios</td>
-                    </tr>
-                    <tr>
-                        <th>Editora</th>
-                        <td>Sony Interactive Entertainment</td>
-                    </tr>
-                    <tr>
-                        <th>Diretor</th>
-                        <td>Eric Williams</td>
-                    </tr>
-                    <tr>
-                        <th>Engine</th>
-                        <td>System created by Sony Santa Monica</td>
-                    </tr>
-                    <tr>
-                        <th>Plataformas</th>
-                        <td>PlayStation 5
-                            PlayStation 4</td>
-                    </tr>
-                    <tr>
-                        <th>Data de Lançamento</th>
-                        <td>09 de Novembro de 2022</td>
-                    </tr>
-                    <tr>
-                        <th>Modo</th>
-                        <td>Single Player</td>
-                    </tr>
-                    <tr class="date-row">
-                        <td>Lançamento Anterior</td>
-                        <td>God of War (2018)</td>
-                    </tr>
-                </table>
-            </nav>
-        </div>
+        <section>
+            <div class="table-information">
+                <nav class="nav-table">
+                    <h2>Jogo Mais Recente</h2>
+                    <table class="table-lateral" summary="Tabela com informações resumidas sobre o jogo">
+                        <tr class="row-table">
+                            <th colspan="2">God of War Ragnarök</th>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><img src="assets/images/God_of_war_Ragnarok.png" width="230"></td>
+                        </tr>
+                        <tr>
+                            <th>Desenvolvedora</th>
+                            <td>Santa Monica Studios</td>
+                        </tr>
+                        <tr>
+                            <th>Editora</th>
+                            <td>Sony Interactive Entertainment</td>
+                        </tr>
+                        <tr>
+                            <th>Diretor</th>
+                            <td>Eric Williams</td>
+                        </tr>
+                        <tr>
+                            <th>Engine</th>
+                            <td>System created by Sony Santa Monica</td>
+                        </tr>
+                        <tr>
+                            <th>Plataformas</th>
+                            <td>PlayStation 5
+                                PlayStation 4</td>
+                        </tr>
+                        <tr>
+                            <th>Data de Lançamento</th>
+                            <td>09 de Novembro de 2022</td>
+                        </tr>
+                        <tr>
+                            <th>Modo</th>
+                            <td>Single Player</td>
+                        </tr>
+                        <tr class="date-row">
+                            <td>Lançamento Anterior</td>
+                            <td>God of War (2018)</td>
+                        </tr>
+                    </table>
+                </nav>
+            </div>
+        </section>
         
-
     </div>
 
     <footer>
