--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </figure>
         </main>
 
-        <div class="table-information">
+        <section><div class="table-information">
             <nav class="nav-table">
                 <h2>Jogo Mais Recente</h2>
                 <table class="table-lateral" summary="Tabela com informações resumidas sobre o jogo">
@@ -142,7 +142,7 @@
                 </table>
             </nav>
         </div>
-    </div>
+    </div></section>
 
     <footer>
         <div class="footer">
