--- a/ragnarok.html
+++ b/ragnarok.html
@@ -67,7 +67,7 @@
                     <li><a href="#Antagonists"><span>2.3.</span><span>Antagonistas</span></a></li>
                     </ul>
                     </li>
-                    <li><a href="#Enemies"><span>3.</span><span>Enimigos</span></a></li>
+                    <li><a href="#Enemies"><span>3.</span><span>Inimigos</span></a></li>
                     <li><a href="#Weapons"><span>4.</span><span>Armas</span></a></li>
                     <li><a href="#Gameplay"><span>5.</span><span>Gameplay</span></a></li>
                     <li><a href="#Development"><span>6.</span><span>Desenvolvimento</span></a></li>
@@ -186,13 +186,13 @@
             </div>
                 <div class="characters">
                     <ul>
-                        <li><img id="char" src="assets/images/kratos.jpg">
+                        <li><img class="char" src="assets/images/kratos.jpg">
                             <p>Kratos</p>
                         </li>
-                        <li><img id="char" src="assets/images/atreus.jpg">
+                        <li><img class="char" src="assets/images/atreus.jpg">
                             <p>Atreus</p>
                         </li>
-                        <li><img id="char" src="assets/images/mimir.jpg">
+                        <li><img class="char" src="assets/images/mimir.jpg">
                             <p>Mimir</p>
                         </li>
                     </ul>
@@ -203,57 +203,57 @@
             </div>
                 <div class="characters">
                     <ul>
-                        <li><img id="char" src="assets/images/brok.jpg">
+                        <li><img class="char" src="assets/images/brok.jpg">
                             <p>Brok</p>
                         </li>
-                        <li><img id="char" src="assets/images/sindri.jpg">
+                        <li><img class="char" src="assets/images/sindri.jpg">
                             <p>Sindri</p>
                         </li>
-                        <li><img id="char" src="assets/images/tyr.jpg">
+                        <li><img class="char" src="assets/images/tyr.jpg">
                             <p>Týr</p>
                         </li>
                     </ul>
                     <ul>
-                        <li><img id="char" src="assets/images/angrboda.jpg">
+                        <li><img class="char" src="assets/images/angrboda.jpg">
                             <p>Angrboda</p>
                         </li>
-                        <li><img id="char" src="assets/images/thrud.jpg">
+                        <li><img class="char" src="assets/images/thrud.jpg">
                             <p>Thrúd</p>
                         </li>
-                        <li><img id="char" src="assets/images/freyr.jpg">
+                        <li><img class="char" src="assets/images/freyr.jpg">
                             <p>Freyr</p>
                         </li>
                     </ul>
                     <ul>
-                        <li><img id="char" src="assets/images/hildisvini.jpg">
+                        <li><img class="char" src="assets/images/hildisvini.jpg">
                             <p>Hilsisvíni</p>
                         </li>
-                        <li><img id="char" src="assets/images/beyla.jpg">
+                        <li><img class="char" src="assets/images/beyla.jpg">
                             <p>Beyla</p>
                         </li>
-                        <li><img id="char" src="assets/images/ratatoskr.jpg">
+                        <li><img class="char" src="assets/images/ratatoskr.jpg">
                             <p>Ratatoskr</p>
                         </li>
                     </ul>
                     <ul>
-                        <li><img id="char" src="assets/images/lunda.jpg">
+                        <li><img class="char" src="assets/images/lunda.jpg">
                             <p>Lúnda</p>
                         </li>
-                        <li><img id="char" src="assets/images/durlin.jpg">
+                        <li><img class="char" src="assets/images/durlin.jpg">
                             <p>Durlin</p>
                         </li>
-                        <li><img id="char" src="assets/images/raeb.jpg">
+                        <li><img class="char" src="assets/images/raeb.jpg">
                             <p>Ræb</p>
                         </li>
                     </ul>
                     <ul>
-                        <li><img id="char" src="assets/images/skjoldr.jpg">
+                        <li><img class="char" src="assets/images/skjoldr.jpg">
                             <p>Skjöldr</p>
                         </li>
-                        <li><img id="char" src="assets/images/sif.jpg">
+                        <li><img class="char" src="assets/images/sif.jpg">
                             <p>Sif</p>
                         </li>
-                        <li><img id="char" src="assets/images/faye.jpg">
+                        <li><img class="char" src="assets/images/faye.jpg">
                             <p>Laufey</p>
                         </li>
                     </ul>
@@ -264,48 +264,97 @@
             </div>
                 <div class="characters">
                     <ul>
-                        <li><img id="char" src="assets/images/odin.jpg">
+                        <li><img class="char" src="assets/images/odin.jpg">
                             <p>Odin</p>
                         </li>
-                        <li><img id="char" src="assets/images/thor.jpg">
+                        <li><img class="char" src="assets/images/thor.jpg">
                             <p>Thor</p>
                         </li>
-                        <li><img id="char" src="assets/images/freya.jpg">
+                        <li><img class="char" src="assets/images/freya.jpg">
                             <p>Freya</p>
                         </li>
                     </ul>
                     <ul>
-                        <li><img id="char" src="assets/images/heimdall.jpg">
+                        <li><img class="char" src="assets/images/heimdall.jpg">
                             <p>Heimdall</p>
                         </li>
-                        <li><img id="char" src="assets/images/fenrir.jpg">
+                        <li><img class="char" src="assets/images/fenrir.jpg">
                             <p>Fenrir</p>
                         </li>
-                        <li><img id="char" src="assets/images/jormungandr.jpg">
+                        <li><img class="char" src="assets/images/jormungandr.jpg">
                             <p>Jörmungandr</p>
                         </li>
                     </ul>
                     <ul>
-                        <li><img id="char" src="assets/images/skoll&hati.jpg">
+                        <li><img class="char" src="assets/images/skoll&hati.jpg">
                             <p>Sköll e Hati</p>
-                        </li>
-                        <li><img id="char" src="assets/images/surtr.jpg">
-                            <p>Surtr</p>
                         </li>
                         <li>
                             <div class="containe">
                                 <div class="flip">
                                     <div class="front">
-                                        <img id="char" src="assets/images/speki.jpg">
+                                        <img class="char" src="assets/images/surtr.jpg">
+                                        <p>Surtr</p>
+                                    </div>
+                                    <div class="back">
+                                        <img class="char" src="assets/images/ragnarok.jpg">
+                                        <p>Ragnarök</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="containe">
+                                <div class="flip">
+                                    <div class="front">
+                                        <img class="char" src="assets/images/speki.jpg">
                                         <p>Speki</p>
                                     </div>
-
                                     <div class="back">
-                                        <img id="char" src="assets/images/svanna.jpg">
+                                        <img class="char" src="assets/images/svanna.jpg">
                                         <p>Svanna</p>
                                     </div>
                                 </div>
                             </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="contents">
+                    <a href="#Enemies" id="Enemies"><h2>Inimigos</h2></a>
+                </div>
+                <hr>
+                <div class="characters">
+                    <ul>
+                        <li><img class="char" src="assets/images/draugr.jpg">
+                            <p>Draugr</p>
+                        </li>
+                        <li><img class="char" src="assets/images/lightElves.jpg">
+                            <p>Light Elves</p>
+                        </li>
+                        <li><img class="char" src="assets/images/darkElves.jpg">
+                            <p>Dark Elves</p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li><img class="char" src="assets/images/helWalker.jpg">
+                            <p>Hel-Walkers</p>
+                        </li>
+                        <li><img class="char" src="assets/images/raiders.jpg">
+                            <p>Raiders</p>
+                        </li>
+                        <li><img class="char" src="assets/images/stalker.jpg">
+                            <p>Stalker</p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li><img class="char" src="assets/images/berserker.jpg">
+                            <p>Berserkers</p>
+                        </li>
+                        <li><img class="char" src="assets/images/ogres.jpg">
+                            <p>Ogres</p>
+                        </li>
+                        <li><img class="char" src="assets/images/wulver.jpg">
+                            <p>Wulver</p>
                         </li>
                     </ul>
                 </div>
